--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,5 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>TestPackage.TestClass.TestCase2</td></tr>
-<tr><td>TestPackage.TestClass.TestCase4</td></tr>
-<tr><td>TestPackage.TestClass.TestCase3</td></tr>
+<tr><td>test_Package.TestClass.TestCase1<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Invalid Email address format validation msg</i></td></tr>
+<tr><td>test_Package.TestClass.TestCase4</td></tr>
+<tr><td>test_Package.TestClass.TestCase2</td></tr>
 </table>
