--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\hessam\AppData\Local\Temp\testng-eclipse-567195105\testng-customsuite.xml</span>
+                    <span>C:\Users\hessam\AppData\Local\Temp\testng-eclipse-1957018339\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestPackage.TestClass" class="method navigator-link" hash-for-method="TestCase1(Yousra, test@test, subject_test, 010-02901892, Msg_test, The e-mail address entered is invalid.)">TestCase1(Yousra, test@test, subject_test, 010-02901892, Msg_test, The e-mail address entered is invalid.)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="test_Package.TestClass" class="method navigator-link" hash-for-method="TestCase3">TestCase3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,17 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TestPackage.TestClass</span>
+              <span class="class-name">test_Package.TestClass</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestCase1(Yousra, test@test, subject_test, 010-02901892, Msg_test, The e-mail address entered is invalid.)">
-                  </a> <!-- TestCase1(Yousra, test@test, subject_test, 010-02901892, Msg_test, The e-mail address entered is invalid.) -->
-                  <span class="method-name">TestCase1</span>
-                  <span class="parameters">(Yousra, test@test, subject_test, 010-02901892, Msg_test, The e-mail address entered is invalid.)</span>
-                  <em>
-(Invalid Email address format validation msg)                  </em>
+                  <a name="TestCase3">
+                  </a> <!-- TestCase3 -->
+                  <span class="method-name">TestCase3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -140,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hessam\AppData\Local\Temp\testng-eclipse-567195105\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hessam\AppData\Local\Temp\testng-eclipse-1957018339\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -149,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestPackage.TestClass&quot;&gt;
+      &lt;class name=&quot;test_Package.TestClass&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TestCase1&quot;/&gt;
+          &lt;include name=&quot;TestCase3&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- TestPackage.TestClass --&gt;
+      &lt;/class&gt; &lt;!-- test_Package.TestClass --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -195,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TestCase1')
-data.setCell(0, 2, 'TestPackage.TestClass')
-data.setCell(0, 3, 1296);
+data.setCell(0, 1, 'TestCase3')
+data.setCell(0, 2, 'test_Package.TestClass')
+data.setCell(0, 3, 14295);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,13 +218,13 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">TestPackage.TestClass</span>
+              <span class="ignored-class-name">test_Package.TestClass</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">TestCase2</span>
+                <span class="ignored-method-name">TestCase1</span>
                 <br/>
                 <span class="ignored-method-name">TestCase4</span>
                 <br/>
-                <span class="ignored-method-name">TestCase3</span>
+                <span class="ignored-method-name">TestCase2</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -239,22 +236,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestPackage.TestClass</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test_Package.TestClass</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">readConfig</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">startDriver</span>
-                <span class="method-start">21 ms</span>
+                <span class="method-start">24 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TestCase1(Yousra, test@test, subject_test, 010-02901892, Msg_test, The e-mail address entered is invalid.)</span>
-                <span class="method-start">26474 ms</span>
+                <span class="method-name">TestCase3</span>
+                <span class="method-start">8858 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">stopDriver</span>
-                <span class="method-start">27781 ms</span>
+                <span class="method-start">23162 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
