--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="779568">  <td>22/08/31 00:45:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.TestCase3()[pri:0, instance:test_Package.TestClass@13e344d]">TestCase3</td> 
-  <td>main@335708295</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>22/08/31 00:45:00</td>   <td>-8852</td> <td>&nbsp;</td><td title="&gt;&gt;Base.readConfig()[pri:0, instance:test_Package.TestClass@13e344d]">&gt;&gt;readConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335708295</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>22/08/31 00:45:00</td>   <td>-8834</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startDriver()[pri:0, instance:test_Package.TestClass@13e344d]">&gt;&gt;startDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335708295</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>22/08/31 00:45:23</td>   <td>14305</td> <td>&nbsp;</td><td title="&lt;&lt;Base.stopDriver()[pri:0, instance:test_Package.TestClass@13e344d]">&lt;&lt;stopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335708295</td>   <td></td> </tr>
+<tr bgcolor="66a7c2">  <td>22/08/31 01:23:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.TestCase4()[pri:0, instance:test_Package.TestClass@f0c8a99]">TestCase4</td> 
+  <td>main@2083999882</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>22/08/31 01:23:18</td>   <td>-10069</td> <td>&nbsp;</td><td title="&gt;&gt;Base.readConfig()[pri:0, instance:test_Package.TestClass@f0c8a99]">&gt;&gt;readConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2083999882</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>22/08/31 01:23:18</td>   <td>-10042</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startDriver()[pri:0, instance:test_Package.TestClass@f0c8a99]">&gt;&gt;startDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2083999882</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>22/08/31 01:23:43</td>   <td>14148</td> <td>&nbsp;</td><td title="&lt;&lt;Base.stopDriver()[pri:0, instance:test_Package.TestClass@f0c8a99]">&lt;&lt;stopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2083999882</td>   <td></td> </tr>
 </table>
